--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
+        footer {
+            margin-top: 50px;
+            text-align: center;
+            padding: 10px;
+        }
     </style>
     <script>
         // Toggle year input type (single year vs range of years)
@@ -128,6 +133,13 @@
                 </div>
             </div>
         </div>
+
+        <!-- Footer with Privacy Policy link -->
+        <footer>
+            <p>
+                <a href="privacy_policy.html">Privacy Policy & Terms of Service</a>
+            </p>
+        </footer>
     </div>
 </body>
 </html>
