--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -3,116 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy & Terms of Service</title>
+    <title>Privacy Policy - IMD Data Extractor</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
             margin: 20px;
-            padding: 20px;
-            background-color: #f5f5f5;
-        }
-        h1, h2 {
-            color: #333;
-        }
-        p {
-            line-height: 1.6;
-            color: #555;
         }
         .container {
             max-width: 800px;
-            margin: 0 auto;
-            background-color: #fff;
             padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .section {
-            margin-bottom: 40px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <!-- Privacy Policy -->
-        <div class="section">
-            <h1>Privacy Policy for IMD Data Extractor</h1>
-            <p><strong>Last Updated:</strong> 28-09-2024</p>
+        <h1>Privacy Policy for IMD Data Extractor</h1>
+        <p><strong>Last Updated: 28-09-2024</strong></p>
 
-            <p>IMD Data Extractor (the "App") values your privacy. This Privacy Policy outlines how we collect, use, and protect your information when you use our application.</p>
+        <p>IMD Data Extractor (the "App") values your privacy. This Privacy Policy outlines how we collect, use, and protect your information when you use our application.</p>
 
-            <h2>1. Information We Collect</h2>
-            <p>We collect the following information to provide and improve the App:</p>
-            <ul>
-                <li><strong>Personal Information:</strong> When you log in using Google, we collect your email address and other basic profile information.</li>
-                <li><strong>App Usage Data:</strong> We collect non-personal information related to how you use the App, including interactions with the App, files accessed, and search queries.</li>
-            </ul>
+        <h2>1. Information We Collect</h2>
+        <p>We collect the following information to provide and improve the App:</p>
+        <ul>
+            <li><strong>Personal Information:</strong> When you log in using Google, we collect your email address and other basic profile information.</li>
+            <li><strong>App Usage Data:</strong> We collect non-personal information related to how you use the App, including interactions with the App, files accessed, and search queries.</li>
+        </ul>
 
-            <h2>2. How We Use Your Information</h2>
-            <p>We use the collected information to:</p>
-            <ul>
-                <li>Provide and maintain the App.</li>
-                <li>Improve the App's functionality and user experience.</li>
-                <li>Monitor usage and fix technical issues.</li>
-                <li>Comply with legal obligations.</li>
-            </ul>
+        <h2>2. How We Use Your Information</h2>
+        <ul>
+            <li>Provide and maintain the App.</li>
+            <li>Improve the App's functionality and user experience.</li>
+            <li>Monitor usage and fix technical issues.</li>
+            <li>Comply with legal obligations.</li>
+        </ul>
 
-            <h2>3. How We Protect Your Information</h2>
-            <p>We implement appropriate security measures to protect your information from unauthorized access, alteration, disclosure, or destruction. However, no method of transmission over the Internet is 100% secure, and we cannot guarantee its absolute security.</p>
+        <h2>3. How We Protect Your Information</h2>
+        <p>We implement appropriate security measures to protect your information from unauthorized access, alteration, disclosure, or destruction. However, no method of transmission over the Internet is 100% secure, and we cannot guarantee its absolute security.</p>
 
-            <h2>4. Sharing of Information</h2>
-            <p>We do not share your personal information with third parties, except:</p>
-            <ul>
-                <li>To comply with legal obligations.</li>
-                <li>With trusted service providers to improve the functionality of the App.</li>
-                <li>With your consent.</li>
-            </ul>
+        <h2>4. Sharing of Information</h2>
+        <p>We do not share your personal information with third parties, except:</p>
+        <ul>
+            <li>To comply with legal obligations.</li>
+            <li>With trusted service providers to improve the functionality of the App.</li>
+            <li>With your consent.</li>
+        </ul>
 
-            <h2>5. Your Choices</h2>
-            <p>You can stop the collection of information by discontinuing the use of the App. If you wish to delete your personal data, contact us at <a href="mailto:ansumanray10@gmail.com">ansumanray10@gmail.com</a>.</p>
+        <h2>5. Your Choices</h2>
+        <p>You can stop the collection of information by discontinuing the use of the App. If you wish to delete your personal data, contact us at <a href="mailto:ansumanray10@gmail.com">ansumanray10@gmail.com</a>.</p>
 
-            <h2>6. Changes to this Privacy Policy</h2>
-            <p>We may update this Privacy Policy from time to time. You are encouraged to review this policy periodically for any changes. Continued use of the App after any modifications signifies your acknowledgment and acceptance of the changes.</p>
+        <h2>6. Changes to this Privacy Policy</h2>
+        <p>We may update this Privacy Policy from time to time. You are encouraged to review this policy periodically for any changes. Continued use of the App after any modifications signifies your acknowledgment and acceptance of the changes.</p>
 
-            <h2>7. Contact Us</h2>
-            <p>If you have any questions or concerns regarding this Privacy Policy, please contact us at <a href="mailto:ansumanray10@gmail.com">ansumanray10@gmail.com</a>.</p>
-        </div>
-
-        <!-- Terms of Service -->
-        <div class="section">
-            <h1>Terms of Service for IMD Data Extractor</h1>
-            <p><strong>Last Updated:</strong> 28-09-2024</p>
-
-            <h2>1. Use of the App</h2>
-            <p>You must be 18 years or older to use this App. By accessing the App, you agree to comply with all applicable laws and these Terms.</p>
-
-            <h2>2. Intellectual Property</h2>
-            <p>All content and materials on this App are owned by or licensed to us. You may not use any of the materials for commercial purposes without obtaining prior written permission from us.</p>
-
-            <h2>3. User Responsibilities</h2>
-            <p>When using the App, you agree not to:</p>
-            <ul>
-                <li>Violate any laws.</li>
-                <li>Infringe on our intellectual property rights.</li>
-                <li>Use the App for any illegal or unauthorized purposes.</li>
-            </ul>
-
-            <h2>4. Disclaimer</h2>
-            <p>The App is provided "as is," without warranties of any kind. We do not guarantee the accuracy, completeness, or reliability of the data provided through the App.</p>
-
-            <h2>5. Limitation of Liability</h2>
-            <p>To the fullest extent permitted by law, we shall not be liable for any indirect, incidental, special, or consequential damages resulting from your use of the App.</p>
-
-            <h2>6. Termination</h2>
-            <p>We may terminate or suspend access to the App at any time without prior notice if you breach these Terms of Service.</p>
-
-            <h2>7. Governing Law</h2>
-            <p>These Terms are governed by and construed in accordance with the laws of India. You agree to submit to the jurisdiction of Kerala for any disputes related to the App.</p>
-
-            <h2>8. Changes to Terms</h2>
-            <p>We reserve the right to modify these Terms of Service at any time. Continued use of the App after any changes signifies your agreement to the revised Terms.</p>
-
-            <h2>9. Contact Us</h2>
-            <p>If you have any questions about these Terms, please contact us at <a href="mailto:ansumanray10@gmail.com">ansumanray10@gmail.com</a>.</p>
-        </div>
+        <h2>7. Contact Us</h2>
+        <p>If you have any questions or concerns regarding this Privacy Policy, please contact us at <a href="mailto:ansumanray10@gmail.com">ansumanray10@gmail.com</a>.</p>
     </div>
 </body>
 </html>
