--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         }
         footer {
             margin-top: 50px;
-            text-align: center;
             padding: 10px;
+            background-color: #fff;
+            border-top: 1px solid #dee2e6;
         }
     </style>
     <script>
@@ -134,11 +135,12 @@
             </div>
         </div>
 
-        <!-- Footer with Privacy Policy link -->
+        <!-- Footer with Privacy Policy and Terms of Service links -->
         <footer>
-            <p>
-                <a href="privacy_policy.html">Privacy Policy & Terms of Service</a>
-            </p>
+            <div class="d-flex justify-content-end">
+                <a href="privacy_policy.html" class="me-3">Privacy Policy</a>
+                <a href="terms_of_service.html">Terms of Service</a>
+            </div>
         </footer>
     </div>
 </body>
